--- a/src/MyLibrary/MyLibrary.fsproj
+++ b/src/MyLibrary/MyLibrary.fsproj
@@ -1,12 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="Library.fs" />
+    <Compile Include="MathLibrary.fs" />
   </ItemGroup>
-
 </Project>
